EKS/Fargate/Fargate-only/601-test-fargate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: fargate-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx
          image: nginxdemos/hello:latest
          ports:
            - containerPort: 80
          # default is 0.25=vCPU , 0.5GB=RAM
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-svc
  namespace: fargate-ns
spec:
  selector:
    app: nginx-test
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-test-ingress
  namespace: fargate-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip # ip is for fargate only
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:277707094115:certificate/7ea361a7-7126-4b01-bf67-872d9ac03654
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    external-dns.alpha.kubernetes.io/hostname: app1.m-khamisi.com
spec:
  ingressClassName: alb
  rules:
    - host: app1.m-khamisi.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test-svc
                port:
                  number: 80
